Quorum/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumber.quorum
class Main
    action Main
        Number num
        num = cast(Number, 7.5)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end