Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumObjInteger.quorum
class Main
    action Main
        Number num
        num = cast(Number, 5)
    end
end